Fixed z-index issue with hamburger menu

--- a/styles/_aboutme.scss
+++ b/styles/_aboutme.scss
@@ -47,3 +47,7 @@
     opacity: 0.6;
     z-index: -1;
 }
+
+.tech-icons {
+    margin-top: 30px;
+}
